Removed select.js and opted for much simpler propogation fix. Bug still remains where select caret displayed on iOS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,3 @@
     flex: 1 0 auto;
   }
 
-/* Removes display of browser-default caret which is visible using select.js iOS fix */
-.hide-select {
-    display: none;
-}
